syntax = "proto3";
package streaming;

service StreamService {
  // Server streaming: returns multiple messages
  rpc GetMessages (MessageRequest) returns (stream MessageResponse);
  
  // Server streaming: returns multiple events
  rpc WatchEvents (EventRequest) returns (stream EventResponse);
}

message MessageRequest {
  string user_id = 1;
  int32 limit = 2;
}

message MessageResponse {
  string id = 1;
  string content = 2;
  int64 timestamp = 3;
  string sender = 4;
}

message EventRequest {
  string topic = 1;
  repeated string filters = 2;
}

message EventResponse {
  string event_id = 1;
  string event_type = 2;
  string data = 3;
  int64 created_at = 4;
}